<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_quiz_details_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/quiz_details_name_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_quiz_details_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_details_name_label" />

        <TextView
            android:id="@+id/tv_quiz_details_category_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/quiz_details_category_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_details_name" />

        <TextView
            android:id="@+id/tv_quiz_details_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_details_category_label" />

        <ImageView
            android:id="@+id/iv_quiz_details_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:padding="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_details_category" />

        <TextView
            android:id="@+id/tv_quiz_details_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/quiz_details_description_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_quiz_details_image" />

        <TextView
            android:id="@+id/tv_quiz_details_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_details_description_label" />

        <TextView
            android:id="@+id/tv_go_back_to_quiz"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quiz_details_description_go_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_details_description"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/tv_start_quiz"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/quiz_details_description_start"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_details_description"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>